<package>
  <name>tracker_cpp</name>
  <version>1.0.0</version>
    <description>
      Executable to acquire images from vrep
  </description>
  <author>Firas Abi Farraj</author>
  <license>GPLv2</license>
  <url>NA</url>
  <maintainer email="firas.abi-farraj@irisa.fr">Firas Abi Farraj</maintainer>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>visp_bridge</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visp_ros</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>visp_bridge</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visp_ros</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
     <rosdoc config="${prefix}/rosdoc.yaml" />
  </export>

</package>
